--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ DerivedData/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.gitignore.io/api/c++,xcode,macos
+
+# Build products
+/retinaizer
